# vizlint

./: LICENSE  README.md  pyproject.toml  tmp_cli_check.py
examples/: my_script.py
src/vizlint/: __init__.py  cli.py  core.py  notebook.py
src/vizlint/adapters/: matplotlib.py
src/vizlint/rules/: __init__.py  axis_labels_missing.py  axis_range_overexpanded.py  bar_zero_baseline.py  title_missing.py
tests/: test_axis_labels_missing.py  test_axis_range_overexpanded.py  test_bar_zero_baseline.py  test_notebook_helper.py  test_report_counts_by_severity.py  test_title_missing.py
